|| ***************************************************************************************************************** ||
|| EBSD 2.0: List of features in latest release with what's coming next!                                             ||
|| ***************************************************************************************************************** ||

26 Apr 2017
 - Done with calculation of disorientation, calculated values look good
 - Time to calculate the real parameters, like GAM and GSD